Fixing clause separators. Adding support for dangling infinitives. Working on bookmarklet (making it scroll when too long).

--- a/www/css/bookmarklet.css
+++ b/www/css/bookmarklet.css
@@ -41,6 +41,7 @@
 		
 		#translationBox .container .translation {
 			padding: 0px 15px;
+			overflow: auto;
 		}
 			#translationBox .container .translation table.info {
 				width: 100%;
